--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,9 +1,10 @@
 .nav {
   display: flex;
-  padding: 1rem;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 0.5rem;
+  height: 10%;
+  padding: 1em;
+  margin-bottom: 2em;
 }
 
 .title {
